--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pc-golf-website",
   "version": "0.1.0",
   "homepage": "https://cchava-1997.github.io/pc-golf-website",
+  "main": "src/index.js",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
